# residential-solar-analysis

./: .gitignore  README.md  pyproject.toml
code/: aws.py  aws_lambda.py  aws_script.py  clustering.ipynb  embeddings.ipynb  loading_clean_desc.ipynb
code/.ipynb_checkpoints/: loading_clean_desc-checkpoint.ipynb
code/lambda_upload/: deploy.sh  main.py  unzip_requirements.py
