[tool.poetry]
name = "residential-solar-analysis"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "residential_solar_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
