[tool.poetry]
name = "residential-solar-analysis"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "residential_solar_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
ipython = "^8.26.0"
transformers = "^4.42.4"
torch = "^2.3.1"
matplotlib = "^3.9.1"
numba = "^0.60.0"
boto3 = "^1.34.146"
pyarrow = "^17.0.0"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
